--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>James Adelhelm Resume</title>
 </head>
 <body style="width:100%; height:100%; margin:0;">
-  <iframe src="https://drive.google.com/file/d/1GMyq39KE9vYb489nhQClXQXF6X8CF_ac/preview" style="width:100%; height:100%;" frameborder="0"></iframe>
+  <iframe src="https://drive.google.com/file/d/1YvYFfdVB7MgvVwSqmZojedcGk5wXqWmT/view?usp=sharing" style="width:100%; height:100%;" frameborder="0"></iframe>
 </body>
 </html>
